--- a/fix bismillah web - Copy/requirements.txt
+++ b/fix bismillah web - Copy/requirements.txt
@@ -1,11 +1,13 @@
-beautifulsoup4==4.9.3
-googlesearch_python==1.0.1
-numpy==1.21.4
-pandas==1.3.4
-python_dateutil==2.8.2
-requests==2.25.1
-whois==0.9.13
-gunicorn==20.1.0
+beautifulsoup4==4.12.3
+googlesearch_python==1.2.4
+numpy==1.26.4
+pandas==2.1.4
+python_dateutil==2.9.0
+requests==2.31.1
+whois== 1.20240129.2
 streamlit==1.35.0
-streamlit_option_menu==0.3.2
+streamlit_option_menu==0.3.13
 scikit-learn==1.4.2
+python-whois==0.9.4
+urllib3==2.2.1
+lxml==5.2.2
